--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -3,26 +3,26 @@ skin: default # default, night, plum, sea, soft, steel
 
 # Theme Text
 t:
-  skip_links: "Skip links"
-  skip_primary_nav: "Skip to primary navigation"
-  skip_content: "Skip to content"
-  skip_footer: "Skip to footer"
-  menu: "Menu"
+  skip_links: "跳过链接  Skip links"
+  skip_primary_nav: "跳到主导航  Skip to primary navigation"
+  skip_content: "跳到内容  Skip to content"
+  skip_footer: "跳到尾页  Skip to footer"
+  menu: "菜单  Menu"
   search: "Search"
   site_search: "Site Search"
   results_found: "Result(s) found"
   search_placeholder_text: "Enter your search term..."
-  home: "Home"
-  newer: "Newer"
-  older: "Older"
+  home: "家  Home"
+  newer: "较新  Newer"
+  older: "较老  Older"
   email: "Email"
-  subscribe: "Subscribe"
-  read_more: "Read More"
-  posts: "Posts"
-  page: "Page"
+  subscribe: "订阅  Subscribe"
+  read_more: "继续阅读  Read More"
+  posts: "文章  Posts"
+  page: "页面  Page"
   of: "of"
-  min_read: "min read"
-  present: "Present"
+  min_read: "所需阅读时间  min read"
+  present: "当下  Present"
 
 # Google Fonts
 google_fonts:
